@@ -1,4 +1,4 @@
-.TH darkice 1 "October 20, 2002" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "February 9, 2003" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -82,7 +82,8 @@ Developed with contributions by
     Kristjan G. Bjarnason <kgb@gangverk.is>
     Nicu Pavel <npavel@ituner.com>
     Kai Krakow <kai@kaishome.de>
-
+    Atsuhiko Yamanaka <ymnk@jcraft.com>
+    Ricardo Galli <gallir@uib.es>
 
 .SH LINKS
 Project homepage:
